# Markov

./: Cargo.toml
markov-cli/: Cargo.toml
markov-cli/src/: commands.rs  lib.rs  main.rs
markov-lib/: Cargo.toml
markov-lib/src/: chain.rs  iter.rs  lib.rs  node.rs  serde.rs
