[package]
name = "markov-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"] }
markov-lib = { version = "0.1.0", path = "../markov-lib", features = ["serde"] }
serde_json = "1.0.94"
