[package]
name = "markov-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markov"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"] }
markov-lib = { version = "0.1.0", path = "../markov-lib", features = ["serde"] }
serde_json = "1.0.94"
