[package]
name = "markov-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.154", features = ["derive"], optional = true }
